解决了默认端口问题，默认端口不应该添加端口号。

--- a/test/HelloWorld.html
+++ b/test/HelloWorld.html
@@ -24,6 +24,9 @@
 					let background = s_map.getPropertyValue("background-color");
 					let ok = s_map.getPropertyValue("--test");
 					console.log(background, ok);
+				},
+				collect(){
+					
 				}
 			}]);
 		</script>
